ADD_SUBDIRECTORY(native)
ADD_SUBDIRECTORY(core)

IF (WITH_ANALYSIS)
  ADD_SUBDIRECTORY(analysis)
ENDIF (WITH_ANALYSIS)

IF (WITH_GUI)
  ADD_SUBDIRECTORY(ui)
  ADD_SUBDIRECTORY(gui)
  ADD_SUBDIRECTORY(auth)
ENDIF (WITH_GUI)

ADD_SUBDIRECTORY(providers)
IF (NOT IOS)
  ADD_SUBDIRECTORY(crssync)
ENDIF (NOT IOS)

IF(WIN32 AND NOT MINGW)
  ADD_SUBDIRECTORY(crashhandler)
ENDIF(WIN32 AND NOT MINGW)
ADD_SUBDIRECTORY(test)

IF (WITH_DESKTOP)
  ADD_SUBDIRECTORY(app)
  ADD_SUBDIRECTORY(plugins)
ENDIF(WITH_DESKTOP)

IF (WITH_3D)
  ADD_SUBDIRECTORY(3d)
ENDIF (WITH_3D)

IF (WITH_BINDINGS)
  ADD_SUBDIRECTORY(python)
ENDIF (WITH_BINDINGS)

IF (WITH_SERVER)
  ADD_SUBDIRECTORY(server)
ENDIF (WITH_SERVER)

IF (WITH_CUSTOM_WIDGETS)
  ADD_SUBDIRECTORY(customwidgets)
ENDIF (WITH_CUSTOM_WIDGETS)

IF (WITH_QUICK)
  ADD_SUBDIRECTORY(quickgui)
ENDIF (WITH_QUICK)
