# Copyright (C) 2003 Gary Sherman <sherman at mrcc.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# NOTE - the order of the SUBDIRS is important. Currently the providers
#        depend on the existence of libqgis_gui. 
#        gui *must* be specified immediately before the providers
#        subdirectory. 
SUBDIRS =  core ui legend raster composer widgets gui providers $(MAC) 

