IF (ENABLE_TESTS)

  IF (WITH_CORE)
    ADD_SUBDIRECTORY(src)
    ADD_SUBDIRECTORY(bench)
  ENDIF (WITH_CORE)

  # Testdata files to install
  INCLUDE(CopyTestdata)

  FILE(GLOB_RECURSE TESTDATA_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/testdata testdata/*)
  ADD_QGIS_TESTDATA("${CMAKE_CURRENT_SOURCE_DIR}" "${TESTDATA_FILES}" DEST_TESTDATA_FILES)
  ADD_CUSTOM_TARGET(testdata ALL DEPENDS ${DEST_TESTDATA_FILES})


  ADD_SUBDIRECTORY(code_layout)
ENDIF (ENABLE_TESTS)


