INCLUDE(CopyResources)

# OS X app/doc icons
IF (APPLE)
  ADD_SUBDIRECTORY(mac)
ENDIF (APPLE)

FILE(GLOB_RECURSE ICON_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.png)

ADD_QGIS_RESOURCES("${CMAKE_CURRENT_SOURCE_DIR}" "images/icons" DEST_ICON_FILES "${ICON_FILES}")

ADD_CUSTOM_TARGET(icons ALL DEPENDS ${DEST_ICON_FILES})
